# mushroom_classifier

./: .gitignore  pyproject.toml  spectra_metadata.csv
fcm_res/: fcm_cap.txt  fcm_gills.txt  fcm_stipe.txt
mushroom_classifier/: fcm.py  models.py  outputs.py  parsing.py  spectra_processing.py  spectra_reading.py  statistic.py  validation.py
spectra_data/: sample_0_Russula_rosea_stipe.npy  sample_1000_Leucocoprinus_ianthinus_stipe.npy  sample_1001_Leucocoprinus_ianthinus_cap.npy  sample_1002_Leucocoprinus_ianthinus_cap.npy  sample_1003_Leucocoprinus_ianthinus_stipe.npy  sample_1004_Leucocoprinus_ianthinus_cap.npy  sample_1005_Leucocoprinus_ianthinus_cap.npy  sample_1006_Leucocoprinus_ianthinus_stipe.npy  sample_1007_Leucocoprinus_ianthinus_cap.npy  sample_1008_Leucocoprinus_ianthinus_stipe.npy  sample_1009_Leucocoprinus_ianthinus_cap.npy  sample_100_Boletus_edulis_gills.npy  sample_1010_Leucocoprinus_ianthinus_gills.npy  sample_1011_Leucocoprinus_ianthinus_cap.npy  sample_1012_Leucocoprinus_ianthinus_gills.npy  sample_1013_Leucocoprinus_ianthinus_gills.npy  sample_1014_Leucocoprinus_ianthinus_gills.npy  sample_1015_Leucocoprinus_ianthinus_stipe.npy  sample_1016_Leucocoprinus_ianthinus_gills.npy  sample_1017_Leucocoprinus_ianthinus_stipe.npy  sample_1018_Leucocoprinus_ianthinus_stipe.npy  sample_1019_Leucocoprinus_ianthinus_cap.npy  sample_101_Boletus_edulis_cap.npy  sample_1020_Leucocoprinus_ianthinus_gills.npy  sample_1021_Leucocoprinus_ianthinus_gills.npy  sample_1022_Leucocoprinus_ianthinus_stipe.npy  sample_1023_Leucocoprinus_ianthinus_stipe.npy  (+1179 more)
